generated/TestGrammarParser.js
// Generated from /Users/ceciliacalvo/Proyectos SSL/analizador-test/TestGrammar.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import TestGrammarListener from './TestGrammarListener.js';
import TestGrammarVisitor from './TestGrammarVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class TestGrammarParser extends antlr4.Parser {

    static grammarFileName = "TestGrammar.g4";
    static literalNames = [ null, "'prueba'", "'dado'", "'cuando'", "'entonces'", 
                            "'es'", "'no es'", "'contiene'", "'existe'", 
                            "'debe'", "'verdadero'", "'falso'", null, "'algo'", 
                            null, null, null, "'.'", "'{'", "'}'", "'$'", 
                            "','", "'['", "']'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, "NUMERO", "STRING", 
                             "IDENT", "NEWLINE", "WS", "DOT", "LBRACE", 
                             "RBRACE", "DOLLAR", "COMMA", "LBRACK", "RBRACK" ];
    static ruleNames = [ "testsuite", "prueba", "paso", "objeto", "estado", 
                         "valor", "lista", "variable", "booleano" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = TestGrammarParser.ruleNames;
        this.literalNames = TestGrammarParser.literalNames;
        this.symbolicNames = TestGrammarParser.symbolicNames;
    }



	testsuite() {
	    let localctx = new TestsuiteContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, TestGrammarParser.RULE_testsuite);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 19; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 18;
	            this.prueba();
	            this.state = 21; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===1);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	prueba() {
	    let localctx = new PruebaContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, TestGrammarParser.RULE_prueba);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 23;
	        this.match(TestGrammarParser.T__0);
	        this.state = 24;
	        this.match(TestGrammarParser.STRING);
	        this.state = 25;
	        this.match(TestGrammarParser.LBRACE);
	        this.state = 29;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 28) !== 0)) {
	            this.state = 26;
	            this.paso();
	            this.state = 31;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 32;
	        this.match(TestGrammarParser.RBRACE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	paso() {
	    let localctx = new PasoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, TestGrammarParser.RULE_paso);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 34;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 28) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	objeto() {
	    let localctx = new ObjetoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, TestGrammarParser.RULE_objeto);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 36;
	        this.match(TestGrammarParser.IDENT);
	        this.state = 41;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===17) {
	            this.state = 37;
	            this.match(TestGrammarParser.DOT);
	            this.state = 38;
	            this.match(TestGrammarParser.IDENT);
	            this.state = 43;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	estado() {
	    let localctx = new EstadoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, TestGrammarParser.RULE_estado);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 44;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 992) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	valor() {
	    let localctx = new ValorContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, TestGrammarParser.RULE_valor);
	    try {
	        this.state = 51;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 13:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 46;
	            this.match(TestGrammarParser.STRING);
	            break;
	        case 12:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 47;
	            this.match(TestGrammarParser.NUMERO);
	            break;
	        case 10:
	        case 11:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 48;
	            this.booleano();
	            break;
	        case 20:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 49;
	            this.variable();
	            break;
	        case 22:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 50;
	            this.lista();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	lista() {
	    let localctx = new ListaContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, TestGrammarParser.RULE_lista);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 53;
	        this.match(TestGrammarParser.LBRACK);
	        this.state = 54;
	        this.valor();
	        this.state = 59;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===21) {
	            this.state = 55;
	            this.match(TestGrammarParser.COMMA);
	            this.state = 56;
	            this.valor();
	            this.state = 61;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 62;
	        this.match(TestGrammarParser.RBRACK);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	variable() {
	    let localctx = new VariableContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, TestGrammarParser.RULE_variable);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 64;
	        this.match(TestGrammarParser.DOLLAR);
	        this.state = 65;
	        this.match(TestGrammarParser.IDENT);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	booleano() {
	    let localctx = new BooleanoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, TestGrammarParser.RULE_booleano);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 67;
	        _la = this._input.LA(1);
	        if(!(_la===10 || _la===11)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

TestGrammarParser.EOF = antlr4.Token.EOF;
TestGrammarParser.T__0 = 1;
TestGrammarParser.T__1 = 2;
TestGrammarParser.T__2 = 3;
TestGrammarParser.T__3 = 4;
TestGrammarParser.T__4 = 5;
TestGrammarParser.T__5 = 6;
TestGrammarParser.T__6 = 7;
TestGrammarParser.T__7 = 8;
TestGrammarParser.T__8 = 9;
TestGrammarParser.T__9 = 10;
TestGrammarParser.T__10 = 11;
TestGrammarParser.NUMERO = 12;
TestGrammarParser.STRING = 13;
TestGrammarParser.IDENT = 14;
TestGrammarParser.NEWLINE = 15;
TestGrammarParser.WS = 16;
TestGrammarParser.DOT = 17;
TestGrammarParser.LBRACE = 18;
TestGrammarParser.RBRACE = 19;
TestGrammarParser.DOLLAR = 20;
TestGrammarParser.COMMA = 21;
TestGrammarParser.LBRACK = 22;
TestGrammarParser.RBRACK = 23;

TestGrammarParser.RULE_testsuite = 0;
TestGrammarParser.RULE_prueba = 1;
TestGrammarParser.RULE_paso = 2;
TestGrammarParser.RULE_objeto = 3;
TestGrammarParser.RULE_estado = 4;
TestGrammarParser.RULE_valor = 5;
TestGrammarParser.RULE_lista = 6;
TestGrammarParser.RULE_variable = 7;
TestGrammarParser.RULE_booleano = 8;

class TestsuiteContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = TestGrammarParser.RULE_testsuite;
    }

	prueba = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(PruebaContext);
	    } else {
	        return this.getTypedRuleContext(PruebaContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof TestGrammarListener ) {
	        listener.enterTestsuite(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof TestGrammarListener ) {
	        listener.exitTestsuite(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof TestGrammarVisitor ) {
	        return visitor.visitTestsuite(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class PruebaContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = TestGrammarParser.RULE_prueba;
    }

	STRING() {
	    return this.getToken(TestGrammarParser.STRING, 0);
	};

	LBRACE() {
	    return this.getToken(TestGrammarParser.LBRACE, 0);
	};

	RBRACE() {
	    return this.getToken(TestGrammarParser.RBRACE, 0);
	};

	paso = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(PasoContext);
	    } else {
	        return this.getTypedRuleContext(PasoContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof TestGrammarListener ) {
	        listener.enterPrueba(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof TestGrammarListener ) {
	        listener.exitPrueba(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof TestGrammarVisitor ) {
	        return visitor.visitPrueba(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class PasoContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = TestGrammarParser.RULE_paso;
    }


	enterRule(listener) {
	    if(listener instanceof TestGrammarListener ) {
	        listener.enterPaso(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof TestGrammarListener ) {
	        listener.exitPaso(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof TestGrammarVisitor ) {
	        return visitor.visitPaso(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class ObjetoContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = TestGrammarParser.RULE_objeto;
    }

	IDENT = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(TestGrammarParser.IDENT);
	    } else {
	        return this.getToken(TestGrammarParser.IDENT, i);
	    }
	};


	DOT = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(TestGrammarParser.DOT);
	    } else {
	        return this.getToken(TestGrammarParser.DOT, i);
	    }
	};


	enterRule(listener) {
	    if(listener instanceof TestGrammarListener ) {
	        listener.enterObjeto(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof TestGrammarListener ) {
	        listener.exitObjeto(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof TestGrammarVisitor ) {
	        return visitor.visitObjeto(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class EstadoContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = TestGrammarParser.RULE_estado;
    }


	enterRule(listener) {
	    if(listener instanceof TestGrammarListener ) {
	        listener.enterEstado(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof TestGrammarListener ) {
	        listener.exitEstado(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof TestGrammarVisitor ) {
	        return visitor.visitEstado(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class ValorContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = TestGrammarParser.RULE_valor;
    }

	STRING() {
	    return this.getToken(TestGrammarParser.STRING, 0);
	};

	NUMERO() {
	    return this.getToken(TestGrammarParser.NUMERO, 0);
	};

	booleano() {
	    return this.getTypedRuleContext(BooleanoContext,0);
	};

	variable() {
	    return this.getTypedRuleContext(VariableContext,0);
	};

	lista() {
	    return this.getTypedRuleContext(ListaContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof TestGrammarListener ) {
	        listener.enterValor(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof TestGrammarListener ) {
	        listener.exitValor(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof TestGrammarVisitor ) {
	        return visitor.visitValor(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class ListaContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = TestGrammarParser.RULE_lista;
    }

	LBRACK() {
	    return this.getToken(TestGrammarParser.LBRACK, 0);
	};

	valor = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ValorContext);
	    } else {
	        return this.getTypedRuleContext(ValorContext,i);
	    }
	};

	RBRACK() {
	    return this.getToken(TestGrammarParser.RBRACK, 0);
	};

	COMMA = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(TestGrammarParser.COMMA);
	    } else {
	        return this.getToken(TestGrammarParser.COMMA, i);
	    }
	};


	enterRule(listener) {
	    if(listener instanceof TestGrammarListener ) {
	        listener.enterLista(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof TestGrammarListener ) {
	        listener.exitLista(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof TestGrammarVisitor ) {
	        return visitor.visitLista(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class VariableContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = TestGrammarParser.RULE_variable;
    }

	DOLLAR() {
	    return this.getToken(TestGrammarParser.DOLLAR, 0);
	};

	IDENT() {
	    return this.getToken(TestGrammarParser.IDENT, 0);
	};

	enterRule(listener) {
	    if(listener instanceof TestGrammarListener ) {
	        listener.enterVariable(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof TestGrammarListener ) {
	        listener.exitVariable(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof TestGrammarVisitor ) {
	        return visitor.visitVariable(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class BooleanoContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = TestGrammarParser.RULE_booleano;
    }


	enterRule(listener) {
	    if(listener instanceof TestGrammarListener ) {
	        listener.enterBooleano(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof TestGrammarListener ) {
	        listener.exitBooleano(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof TestGrammarVisitor ) {
	        return visitor.visitBooleano(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}




TestGrammarParser.TestsuiteContext = TestsuiteContext; 
TestGrammarParser.PruebaContext = PruebaContext; 
TestGrammarParser.PasoContext = PasoContext; 
TestGrammarParser.ObjetoContext = ObjetoContext; 
TestGrammarParser.EstadoContext = EstadoContext; 
TestGrammarParser.ValorContext = ValorContext; 
TestGrammarParser.ListaContext = ListaContext; 
TestGrammarParser.VariableContext = VariableContext; 
TestGrammarParser.BooleanoContext = BooleanoContext; 
